# qr-detect

./: Cargo.toml  README.md
src/: main.rs
