[package]
name = "qr-detect"
version = "0.1.0"
authors = ["wongxy <xiyao.wong@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.5"
rqrr = "0.3.2"
base64 = "0.13.0"
image = "0.23.14"
